--- a/.github.yml
+++ b/.github.yml
@@ -1,4 +1,5 @@
 ---
+# See https://github.com/jvautier/project-cli
 fullname: jvautier/ansible-role-confd
 description: Install confd through ansible
 tags:
